Fix de quelques problèmes d'alignements + retrait des Alt de Collapse + redirection via Logo + Max-width KASA 1920px + Navigation active soulignée + Logo non écrasé en responsive

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -1,5 +1,7 @@
 .Collapse-info {
-    margin-left: 15%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     @media screen and (max-width:1024px) {
         margin-left: 0;
     }
