--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -13,5 +13,6 @@ $font-kasa: 'Montserrat', sans-serif;
 body{
     background: white;
     font-family: $font-kasa;
+    max-width: 1920px;
 }
 
